Added a catch block around socket errors in the retrieve action, remodeled parse action to work with a date instead of timestamps. Added an option to remove files from the file_status.
